--- a/matematicamente.html
+++ b/matematicamente.html
@@ -3,7 +3,7 @@
   <head>
 	<meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="d3.min.js"></script>
+	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   </head>
   <body>
 	<div id="adduser">
